# rcd-corp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROMPT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/architect/: kb-architect.md
.claude/agents/cloud/: aws-deployer.md  aws-lambda-architect.md  ci-cd-specialist.md  lambda-builder.md
.claude/agents/data-engineering/: lakeflow-architect.md  lakeflow-pipeline-builder.md
.claude/agents/dev/: codebase-explorer.md
.claude/commands/knowledge/: create-kb.md
.claude/sdd/architecture/: ARCHITECTURE.md  (+1 more)
aurora_data/: __init__.py  config.yaml  main.py
aurora_data/generators/: __init__.py  base.py  finance.py  hr.py  manufacturing.py  marketing.py  master_data.py  observability.py  sales.py  social_media.py  supply_chain.py  support.py
aurora_data/sinks/: __init__.py  csv_sink.py  parquet_sink.py  postgres_sink.py
aurora_data/tests/: __init__.py  test_referential_integrity.py
aurora_data/utils/: __init__.py  distributions.py  fx.py  identifiers.py  state_machines.py  time_utils.py
docs/: erd.html
rcd_data/: __init__.py  config.yaml  main.py
rcd_data/generators/: __init__.py  base.py  finance.py  hr.py  manufacturing.py  marketing.py  master_data.py  observability.py  sales.py  social_media.py  supply_chain.py  support.py
rcd_data/sinks/: __init__.py  csv_sink.py  parquet_sink.py  postgres_sink.py
rcd_data/tests/: __init__.py  test_referential_integrity.py
rcd_data/utils/: __init__.py  distributions.py  fx.py  identifiers.py  state_machines.py  time_utils.py
(+17 files in other folders)
