[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcd-data"
version = "1.0.0"
description = "Synthetic operational data generator for RCD Corp"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "faker>=24.0.0",
    "mimesis>=13.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "tqdm>=4.66.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.3.0"]

[project.scripts]
rcd-data = "rcd_data.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rcd_data*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["rcd_data/tests"]
